<resources>
    <string name="app_name">RaspberryUpdate</string>

    <string name="change_to_canary_text">Canary</string>
    <string name="change_to_dev_text">Development</string>
    <string name="change_to_beta_text">Beta</string>
    <string name="change_to_stable_text">Stable</string>

    <string name="check_update_now_button_text">Controlla la disponibilità di aggiornamenti.</string>

    <string name="factory_reset_button_text">Factory Reset.</string>
    <string name="reboot_button_text">Riavvia.</string>
</resources>